Fixed award column wrap

--- a/includes/blocks/text-block/style.css
+++ b/includes/blocks/text-block/style.css
@@ -2,15 +2,17 @@
     padding: 120px 0 0 0;
 }
 .text-feature-stage + .text-feature-stage {
-    padding: 80px 0 0 0;
+    padding: 60px 0 0 0;
 }
 .text-feature-stage + .awards-callout-stage {
-    padding: 80px 0 0 0;
+    padding: 60px 0 0 0;
 }
-
 .text-feature-stage + .awards-callout-stage #results_stage {
     min-height: auto;
     /* padding-bottom: 120px; */
+}
+.text-feature-stage + .country-contacts-stage {
+    margin-top: 100px;
 }
 .text-feature .columns {
     color: var(--color-dark-gray);
